--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Odin Recipes | Home</title>
+    <title>Odin Recipes | Mac & Cheese</title>
   </head>
 
   <body>
