--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Simple Mac and Cheese</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F19%2F238691-Simple-Macaroni-And-Cheese-mfs_006.jpg&q=60&c=sc&poi=auto&orient=true&h=512" height="256">
+    <img src="../img/mac-n-cheese.jpeg" height="256">
 
     <h2>Description</h2>
 
