Edit formatting of fractions
Changed the formatting of fractions, e.g. from 1/2 to ½

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -15,9 +15,9 @@
     <h3>Ingredients</h3>
     <ul>
       <li>1 box elbow macaroni</li>
-      <li>1/4 cup butter</li>
-      <li>1/4 cup all-purpose flour</li>
-      <li>1/2 teaspoon salt</li>
+      <li>¼ cup butter</li>
+      <li>¼ cup all-purpose flour</li>
+      <li>½ teaspoon salt</li>
       <li>ground black pepper to taste</li>
       <li>2 cups milk</li>
       <li>2 cups shredded Cheddar cheese</li>
