--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/mac-n-cheese.html">Simple Mac and Cheese</a>
+    <ul>
+      <li><a href="./recipes/mac-n-cheese.html">Simple Mac and Cheese</a></li>
+      <li><a href="./recipes/honey-glazed-chicken.html">Honey Glazed Chicken</a></li>
+    </ul>
   </body>
 </html>
