--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./recipes/mac-n-cheese.html">Simple Mac and Cheese</a></li>
       <li><a href="./recipes/honey-glazed-chicken.html">Honey Glazed Chicken</a></li>
+      <li><a href="./recipes/banana-pancake.html">Banana Pancake</a></li>
     </ul>
   </body>
 </html>
