--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes | Home</title>
+
+    <link href="./index.css" rel="stylesheet">
   </head>
 
   <body>
