Add styling for mac-n-cheese recipe page

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -4,15 +4,17 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes | Mac & Cheese</title>
+
+    <link rel="stylesheet" href="./css/mac-n-cheese.css">
   </head>
 
   <body>
-    <h1>Simple Mac and Cheese</h1>
+    <h1 class="heading title">Simple Mac and Cheese</h1>
     <img src="../img/mac-n-cheese.jpeg" height="256">
 
-    <h2>Description</h2>
+    <h2 class="heading description">Description</h2>
 
-    <h3>Ingredients</h3>
+    <h3 class="heading ingredients">Ingredients</h3>
     <ul>
       <li>1 box elbow macaroni</li>
       <li>¼ cup butter</li>
@@ -23,7 +25,7 @@
       <li>2 cups shredded Cheddar cheese</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="heading steps">Steps</h3>
     <ol>
       <li>
         Bring a large pot of lightly salted water to a boil. Cook elbow
