Add styling for honey glazed chicken recipe

--- a/recipes/honey-glazed-chicken.html
+++ b/recipes/honey-glazed-chicken.html
@@ -4,15 +4,17 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes | Honey Glazed Chicken</title>
+
+    <link rel="stylesheet" href="./css/honey-glazed-chicken.css">
   </head>
 
   <body>
-    <h1>Honey Glazed Chicken</h1>
+    <h1 class="heading title">Honey Glazed Chicken</h1>
     <img src="../img/honey-glazed-chicken.webp" height="256">
 
-    <h2>Description</h2>
+    <h2 class="heading description">Description</h2>
 
-    <h3>Ingredients</h3>
+    <h3 class="heading ingredients">Ingredients</h3>
     <ul>
       <li>¼ cup honey</li>
       <li>2 tablespoons soy sauce</li>
@@ -21,7 +23,7 @@
       <li>2 skinless, boneless chicken breast halves, cut into bite-size pieces</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="heading steps">Steps</h3>
     <ol>
       <li>
         Gather all ingredients.
