Add styling for banana pancake recipe
 - modified:   recipes/banana-pancake.html
 - new file:   recipes/css/banana-pancake.css

--- a/recipes/banana-pancake.html
+++ b/recipes/banana-pancake.html
@@ -4,15 +4,17 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes | Banana Pancake</title>
+
+    <link rel="stylesheet" href="./css/banana-pancake.css">
   </head>
 
   <body>
-    <h1>Banana Pancake</h1>
+    <h1 class="heading title">Banana Pancake</h1>
     <img src="../img/banana-pancake.webp" height="256">
 
-    <h2>Description</h2>
+    <h2 class="heading description">Description</h2>
 
-    <h3>Ingredients</h3>
+    <h3 class="heading ingredients">Ingredients</h3>
     <ul>
       <li>flour</li>
       <li>sugar</li>
@@ -24,7 +26,7 @@
       <li>bananas</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="heading steps">Steps</h3>
     <ol>
       <li>
         <h4>Mix</h4>
